unionify/tests/fail/error_aggregation.stderr
error: UnionSize is not derivable for enum variants containing more than one field
 --> tests/fail/error_aggregation.rs:5:7
  |
5 |     A { a1: u8, a2: u8 },
  |       ^^^^^^^^^^^^^^^^^^

error: UnionSize is not derivable for enum variants containing more than one field
 --> tests/fail/error_aggregation.rs:6:7
  |
6 |     B { b1: u64, b2: u64 },
  |       ^^^^^^^^^^^^^^^^^^^^

error: UnionSize is not derivable for enum variants containing more than one field
 --> tests/fail/error_aggregation.rs:7:7
  |
7 |     C { c1: u8, c2: u16 },
  |       ^^^^^^^^^^^^^^^^^^^
